# Sniper

./: .gitignore  Cargo.toml  TODO  bot.rs  config.rs  db.rs  events.rs  main.rs  models.rs  utils.rs
assets/abis/: sniper-abi.json
assets/contract/: swap.sol
client/: client.rs  provider.rs
extra/: package.json  pair_migrate.js  pair_sync.js
resources/: trailing.txt
src/: config.rs  db.rs  events.rs  lib.rs  main.rs  models.rs  utils.rs
src/bot/: bot.rs  helper.rs
src/client/: abi.rs  eth.rs  provider.rs
tests/: pub.rs  sub.rs
